--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/env": "^15.1.2",
+    "dayjs": "^1.11.13",
     "ethers": "^5.7.2",
     "next": "15.1.0",
     "react": "^19.0.0",
